--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,4 +1,7 @@
 <html>
 <head>
   <title>Home</title>
+  <style>
+    .container {border:1px solid #000; padding:2px; font:normal 10px Arial; float:left;}
+  </style>
 </head>
